# ontok

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.claude/scripts/: pyproject.toml
.claude/scripts/app/: __init__.py  main.py
.claude/scripts/app/api/: README.mdx  __init__.py  mcp.py
.claude/scripts/app/domain/: __init__.py
.claude/scripts/app/domain/construction/: plan.py
.claude/scripts/app/domain/foreign/: __init__.py  ast.py
.claude/scripts/app/domain/gate/bs_detector/: DETECTOR-PATTERN-FOR-LLM.mermaid  README.mdx  license.py  module_level_function.py  report.py  type.py  value.py
.claude/scripts/app/domain/knowledge/: README.mdx
.claude/scripts/app/domain/resource/: __init__.py  collection.py  document.py  type.py
.claude/scripts/app/domain/resource/content/: documentation.md  jargon.md  topology.md
.claude/scripts/app/domain/resource/content/construct/: binding.md  collection.md  composition-root.md  concept-model.md  config.md  consistency-model.md  contract-model.md  derivation.md  foreign-model.md  ordered-union.md  route.md  semantic-scalar.md  union.md  value-object.md  verb.md
.claude/scripts/app/domain/resource/content/forbidden/: after-validator.md  arbitrary-type-off-the-edge.md  bare-primitive.md  bare-root-mid-graph.md  body-drifted-from-the-chain.md  collection-not-proven-by-construction.md  dead-handle.md  field-the-ontology-did-not-model.md  free-floating-vocabulary.md  free-method-on-a-frozen-value.md  frozen-live-edge.md  module-level-function.md  multiple-constructions-in-one-verb.md  mutable-bag.md  nullable-absence.md  open-product.md  pre-construction-munging.md  scalar-not-proven-by-construction.md  serialization-in-the-domain.md  stub-verb.md  unclaimed-class.md  (+7 more)
(+9 files in other folders)
