[project]
name = "ontok"
version = "0.1.0"
description = "Ontology Kernel for machine knowledge systems."
requires-python = ">=3.13"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontok"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
]
