[project]
name = "tca-mcp"
version = "0.1.0"
description = "TCA construct-card MCP server (dev tooling)"
requires-python = ">=3.12"
dependencies = [
    "ast2json>=0.4",
    "fastmcp>=3.4.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
exclude = ["*.mdx"]
